--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "serverless-http": "^3.2.0"  <-- ADD THIS LINE
   },
   "engines": {
     "node": "18.x"
